--- a/public/index.html
+++ b/public/index.html
@@ -14,144 +14,133 @@
     }
 
     html {
-      width: 100vw;
       height: 100vh;
       overflow-x: hidden;
       overflow-y: auto;
+      width: 100vw;
     }
 
     body {
+      align-items: center;
       display: flex;
       height: 100%;
-      -webkit-align-items: center;
-      -ms-flex-align: center;
-      align-items: center;
-      -webkit-justify-content: center;
-      -ms-flex-pack: center;
       justify-content: center;
     }
 
     #app_spinner {
-      -webkit-animation: rotator 1.4s linear infinite;
       animation: rotator 1.4s linear infinite;
     }
 
-    @-webkit-keyframes rotator {
-
+    @keyframes rotator {
       0% {
-        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
         transform: rotate(0deg);
       }
 
       100% {
-        -webkit-transform: rotate(270deg);
+        transform: rotate(270deg);
         transform: rotate(270deg);
       }
     }
 
     @keyframes rotator {
-
       0% {
-        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
         transform: rotate(0deg);
       }
 
       100% {
-        -webkit-transform: rotate(270deg);
+        transform: rotate(270deg);
         transform: rotate(270deg);
       }
     }
 
     #app_spinner-path {
+      animation: dash 1.4s ease-in-out infinite, colors 5.6s ease-in-out infinite;
+      animation: dash 1.4s ease-in-out infinite, colors 5.6s ease-in-out infinite;
       stroke-dasharray: 187;
       stroke-dashoffset: 0;
-      -webkit-transform-origin: center;
-      -ms-transform-origin: center;
       transform-origin: center;
-      -webkit-animation: dash 1.4s ease-in-out infinite, colors 5.6s ease-in-out infinite;
-      animation: dash 1.4s ease-in-out infinite, colors 5.6s ease-in-out infinite;
+      transform-origin: center;
+      transform-origin: center;
     }
 
-    @-webkit-keyframes colors {
-
+    @keyframes colors {
       0% {
-        stroke: #4285F4;
+        stroke: #4285f4;
       }
 
       25% {
-        stroke: #DE3E35;
+        stroke: #de3e35;
       }
 
       50% {
-        stroke: #F7C223;
+        stroke: #f7c223;
       }
 
       75% {
-        stroke: #1B9A59;
+        stroke: #1b9a59;
       }
 
       100% {
-        stroke: #4285F4;
+        stroke: #4285f4;
       }
     }
 
     @keyframes colors {
-
       0% {
-        stroke: #4285F4;
+        stroke: #4285f4;
       }
 
       25% {
-        stroke: #DE3E35;
+        stroke: #de3e35;
       }
 
       50% {
-        stroke: #F7C223;
+        stroke: #f7c223;
       }
 
       75% {
-        stroke: #1B9A59;
+        stroke: #1b9a59;
       }
 
       100% {
-        stroke: #4285F4;
+        stroke: #4285f4;
       }
     }
 
-    @-webkit-keyframes dash {
-
+    @keyframes dash {
       0% {
         stroke-dashoffset: 187;
       }
 
       50% {
         stroke-dashoffset: 46.75;
-        -webkit-transform: rotate(135deg);
+        transform: rotate(135deg);
         transform: rotate(135deg);
       }
 
       100% {
         stroke-dashoffset: 187;
-        -webkit-transform: rotate(450deg);
+        transform: rotate(450deg);
         transform: rotate(450deg);
       }
     }
 
     @keyframes dash {
-
       0% {
         stroke-dashoffset: 187;
       }
 
       50% {
         stroke-dashoffset: 46.75;
-        -webkit-transform: rotate(135deg);
+        transform: rotate(135deg);
         transform: rotate(135deg);
       }
 
       100% {
         stroke-dashoffset: 187;
-        -webkit-transform: rotate(450deg);
+        transform: rotate(450deg);
         transform: rotate(450deg);
       }
     }
