⚡️ CDN 配置 prefetch

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+  <link rel="dns-prefetch" href="https://cdn.bootcss.com" />
   <title>若石管理系统</title>
   <style>
     * {
@@ -34,11 +35,9 @@
     @keyframes rotator {
       0% {
         transform: rotate(0deg);
-        transform: rotate(0deg);
       }
 
       100% {
-        transform: rotate(270deg);
         transform: rotate(270deg);
       }
     }
@@ -46,23 +45,18 @@
     @keyframes rotator {
       0% {
         transform: rotate(0deg);
-        transform: rotate(0deg);
       }
 
       100% {
-        transform: rotate(270deg);
         transform: rotate(270deg);
       }
     }
 
     #app_spinner-path {
       animation: dash 1.4s ease-in-out infinite, colors 5.6s ease-in-out infinite;
-      animation: dash 1.4s ease-in-out infinite, colors 5.6s ease-in-out infinite;
       stroke-dasharray: 187;
       stroke-dashoffset: 0;
       transform-origin: center;
-      transform-origin: center;
-      transform-origin: center;
     }
 
     @keyframes colors {
@@ -123,7 +117,6 @@
       100% {
         stroke-dashoffset: 187;
         transform: rotate(450deg);
-        transform: rotate(450deg);
       }
     }
 
@@ -135,12 +128,10 @@
       50% {
         stroke-dashoffset: 46.75;
         transform: rotate(135deg);
-        transform: rotate(135deg);
       }
 
       100% {
         stroke-dashoffset: 187;
-        transform: rotate(450deg);
         transform: rotate(450deg);
       }
     }
