--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <link rel="dns-prefetch" href="https://cdn.bootcss.com" />
-  <title>若石管理系统</title>
+  <title><%= htmlWebpackPlugin.options.title %></title>
   <style>
     * {
       margin: 0;
