--- a/public/index.html
+++ b/public/index.html
@@ -147,6 +147,9 @@
   </div>
   <!-- / cdn -->
   <% if(htmlWebpackPlugin.options.cdn) {%>
+		<% for(var css of htmlWebpackPlugin.options.cdn.css) { %>
+      <link rel="stylesheet" href="<%=css%>">
+  <% } %>
 		<% for(var js of htmlWebpackPlugin.options.cdn.js) { %>
 			<script src="<%=js%>"></script>
 		<% } %>
