🐛 hide scroll-bar in html tag

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     html {
       height: 100vh;
       overflow-x: hidden;
-      overflow-y: auto;
+      overflow-y: auto !important;
       width: 100vw;
     }
 
