--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>VuetifyBoilerplate</title>
+  <title><{ VITE_APP_TITLE }></title>
   <link rel="icon" href="/logo.svg">
   <link rel="dns-prefetch" href="https://cdn.jsdelivr.net" />
   <style>
