--- a/index.html
+++ b/index.html
@@ -11,146 +11,135 @@
 </head>
 
 <body>
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-    }
-
-    html, body {
-      height: 100vh;
-      width: 100vw;
-      overflow-x: hidden;
-      overflow-y: auto !important;
-    }
-
-    #app_spinner_wrapper{
-      position: fixed;
-      top: 0;
-      right: 0;
-      bottom: 0;
-      left: 0;
-      z-index: 1;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background-color: var(--spinner-bg-color);
-    }
-
-    #app_spinner {
-      animation: rotator 1.4s linear infinite;
-    }
-
-    @keyframes rotator {
-      0% {
-        transform: rotate(0deg);
-      }
-
-      100% {
-        transform: rotate(270deg);
-      }
-    }
-
-    @keyframes rotator {
-      0% {
-        transform: rotate(0deg);
-      }
-
-      100% {
-        transform: rotate(270deg);
-      }
-    }
-
-    #app_spinner-path {
-      animation: dash 1.4s ease-in-out infinite, colors 5.6s ease-in-out infinite;
-      stroke-dasharray: 187;
-      stroke-dashoffset: 0;
-      transform-origin: center;
-    }
-
-    @keyframes colors {
-      0% {
-        stroke: #4285f4;
-      }
-
-      25% {
-        stroke: #de3e35;
-      }
-
-      50% {
-        stroke: #f7c223;
-      }
-
-      75% {
-        stroke: #1b9a59;
-      }
-
-      100% {
-        stroke: #4285f4;
-      }
-    }
-
-    @keyframes colors {
-      0% {
-        stroke: #4285f4;
-      }
-
-      25% {
-        stroke: #de3e35;
-      }
-
-      50% {
-        stroke: #f7c223;
-      }
-
-      75% {
-        stroke: #1b9a59;
-      }
-
-      100% {
-        stroke: #4285f4;
-      }
-    }
-
-    @keyframes dash {
-      0% {
-        stroke-dashoffset: 187;
-      }
-
-      50% {
-        stroke-dashoffset: 46.75;
-        transform: rotate(135deg);
-        transform: rotate(135deg);
-      }
-
-      100% {
-        stroke-dashoffset: 187;
-        transform: rotate(450deg);
-      }
-    }
-
-    @keyframes dash {
-      0% {
-        stroke-dashoffset: 187;
-      }
-
-      50% {
-        stroke-dashoffset: 46.75;
-        transform: rotate(135deg);
-      }
-
-      100% {
-        stroke-dashoffset: 187;
-        transform: rotate(450deg);
-      }
-    }
-  </style>
-  <script>
-    const dark = localStorage.getItem('dark') === 'true'
-    document.body.style.setProperty('--spinner-bg-color', dark ? 'rgba(0, 0, 0, 0.7)' : 'rgba(255, 255, 255, 0.7)')
-  </script>
   <div id="app"></div>
   <div id="app_spinner_wrapper">
+    <style>
+      #app_spinner_wrapper{
+        position: fixed;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        z-index: 1;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: var(--bg-color);
+      }
+  
+      #app_spinner {
+        animation: rotator 1.4s linear infinite;
+      }
+  
+      @keyframes rotator {
+        0% {
+          transform: rotate(0deg);
+        }
+  
+        100% {
+          transform: rotate(270deg);
+        }
+      }
+  
+      @keyframes rotator {
+        0% {
+          transform: rotate(0deg);
+        }
+  
+        100% {
+          transform: rotate(270deg);
+        }
+      }
+  
+      #app_spinner-path {
+        animation: dash 1.4s ease-in-out infinite, colors 5.6s ease-in-out infinite;
+        stroke-dasharray: 187;
+        stroke-dashoffset: 0;
+        transform-origin: center;
+      }
+  
+      @keyframes colors {
+        0% {
+          stroke: #4285f4;
+        }
+  
+        25% {
+          stroke: #de3e35;
+        }
+  
+        50% {
+          stroke: #f7c223;
+        }
+  
+        75% {
+          stroke: #1b9a59;
+        }
+  
+        100% {
+          stroke: #4285f4;
+        }
+      }
+  
+      @keyframes colors {
+        0% {
+          stroke: #4285f4;
+        }
+  
+        25% {
+          stroke: #de3e35;
+        }
+  
+        50% {
+          stroke: #f7c223;
+        }
+  
+        75% {
+          stroke: #1b9a59;
+        }
+  
+        100% {
+          stroke: #4285f4;
+        }
+      }
+  
+      @keyframes dash {
+        0% {
+          stroke-dashoffset: 187;
+        }
+  
+        50% {
+          stroke-dashoffset: 46.75;
+          transform: rotate(135deg);
+          transform: rotate(135deg);
+        }
+  
+        100% {
+          stroke-dashoffset: 187;
+          transform: rotate(450deg);
+        }
+      }
+  
+      @keyframes dash {
+        0% {
+          stroke-dashoffset: 187;
+        }
+  
+        50% {
+          stroke-dashoffset: 46.75;
+          transform: rotate(135deg);
+        }
+  
+        100% {
+          stroke-dashoffset: 187;
+          transform: rotate(450deg);
+        }
+      }
+    </style>
+    <script>
+      const el = document.getElementById('app_spinner_wrapper')
+      const dark = localStorage.getItem('dark') === 'true'
+      el.style.setProperty('--bg-color', dark ? 'rgba(0, 0, 0, 0.7)' : 'rgba(255, 255, 255, 0.7)')
+    </script>
     <svg id="app_spinner" width="65px" height="65px" viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg">
       <circle id="app_spinner-path" fill="none" stroke-width="6" stroke-linecap="round" cx="33" cy="33" r="30" />
     </svg>
